# observe-insurance-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  schemas.py
app/agents/: graph.py
app/agents/call_agent/: __main__.py  agent.py  memory.py  prompt.py
app/core/: config.py  logging.py
app/db/: database.py  init_db.py  models.py  seed.py
app/llm/: openrouter.py
app/rag/: embeddings.py  ingest.py  loaders.py  retrieval.py  vectorstore.py
app/routes/: call_logs.py  chat.py  claims.py  customers.py  escalations.py  llm_health.py  policies.py  voice.py
app/voice/: deepgram.py  events.py  pipeline.py  sanitize.py  tts.py
data/faqs/: faqs.json
scripts/: build_pdfs.py
static/: voice.html
tests/: conftest.py  test_agent.py  test_chat_router.py  test_voice_router.py
tests/evals/: README.md  conftest.py  judge.py  scenarios.py  test_auth.py  test_call_logs.py  test_claims.py  test_edge_cases.py  test_escalation.py  test_faq.py  test_multiturn.py
tests/evals/results/: evals_20260623_115436.csv  evals_20260623_120127.csv  evals_20260623_120514.csv  evals_20260623_124949.csv  evals_20260623_125050.csv  evals_20260623_125931.csv  evals_20260623_130832.csv  evals_20260623_151407.csv  evals_20260623_152454.csv  evals_20260623_153820.csv
tests/rag/: conftest.py  test_ingest.py
tests/tools/: test_call_logs.py  test_claims.py  test_customers.py  test_escalation.py  test_faq.py  test_policies.py  test_sms.py
tests/voice/: test_deepgram.py  test_pipeline.py  test_sanitize.py  test_tts.py
(+8 files in other folders)
