[project]
name = "obvserve-insurance-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "ty>=0.0.51",
]
