[project]
name = "obvserve-insurance-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "reportlab>=5.0.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]
